# NFacT_PP

./: .gitignore  Dockerfile  README.md  nfact  nfact_nmf  pyproject.toml  test.txt
NFACT/: __init__.py  nfact  nfact_averaging.py  nfact_dr.py  nfact_file_checking_functions.py  nfact_functions.py  nfact_nmf.py  nfact_preproc  nfact_preproc_arguments.py  nfact_preproc_functions.py  nfact_preprocessing.py  nfact_preprocessing_functions.py  nfactpp.py  nfactpp_argument_functions.py  nfactpp_build_functions.py  nfactpp_check_and_build.py  nfactpp_check_functions.py  nfactpp_run_functions.py  nfactpp_utils.py  nfactpp_utils_functions.py  test.sh  test_preprocessing
NFACT/legacy/: nfact  nfact_averaging.py  nfact_dr.py  nfact_dualregress  nfact_nmf.py  nfact_preproc
NFACT/legacy/nfact_package/: README.md  example_run.sh
NFACT/legacy/nfact_package/nfact_code/: nfact_dualregress  nfact_preproc
NFACT/legacy/nfact_package/nfact_code/nfact_py/: nfact_averaging
NFACT/legacy/sampling_scripts/: downsample.sh  dual_regress.sh  preprocessing_nfact.sh
NFACT/nfact_functions/: __init__.py  args.py  data_functions.py
NFACT/nfact_scripts/: __init__.py  nfact_averaging.py  nfact_dr.py  nfact_nmf.py
NFACT_PP/: __main__.py  nfactpp.py  nfactpp_argument_functions.py  nfactpp_build_functions.py  nfactpp_check_functions.py  nfactpp_probtrackx_functions.py  nfactpp_utils_functions.py
nfact_package/xtract_blueprint/: README.txt  create_blueprint  xtract_blueprint
