# pyproject.toml

[build-system]
requires      = ["setuptools>=44.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NFACT_PP"
version = "1.0.0"
description = "NFACT Pre-processing"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["NFACT_PP"]

dependencies = [
    'scipy',
    'numpy',
    'progressbar',
    'nibabel',
    'scikit-learn',
    'fslpy'

]
requires-python = ">=3.8"

[project.scripts]
entry_point = "NFACT_PP.nfactapp:main"